testsuite/tests/typecheck/should_fail/IPFail.hs
{-# LANGUAGE ImplicitParams #-}

module IPFail where

f0 :: (?x :: Int) => () -> Bool
f0 () = let ?x = 5 in ?x
