testsuite/tests/typecheck/should_fail/IPFail.stderr

IPFail.hs:6:23: error:
    Couldn't match type ‘Integer’ with ‘Bool’
    arising from a functional dependency between constraints:
      ‘?x::Bool’
        arising from a use of implicit parameter ‘?x’ at IPFail.hs:6:23-24
      ‘?x::Integer’
        arising from the implicit-parameter binding for ?x
        at IPFail.hs:6:9-24
    In the expression: ?x
    In the expression: let ?x = 5 in ?x
    In an equation for ‘f0’: f0 () = let ?x = 5 in ?x
